# ChangeLog for games-server/tpadmin-cpp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Sep 2008; Aaron Mavrinac <mavrinac@gmail.com> tpadmin-cpp-9999.ebuild: 
  Initial import (development version from git)