@@ -2,5 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tpadmin-cpp-0.1.0 (12 Jan 2008)
+
+  12 Jan 2008; Aaron Mavrinac <mavrinac@gmail.com> tpadmin-cpp-0.1.0.ebuild:
+  New version
+
   30 Sep 2008; Aaron Mavrinac <mavrinac@gmail.com> tpadmin-cpp-9999.ebuild: 
   Initial import (development version from git)
